# summer-of-spin

Challenge-4/sos-c4/: .gitignore  Cargo.toml  spin.toml
Challenge-4/sos-c4/record/: Cargo.toml
Challenge-4/sos-c4/record/src/: lib.rs
Challenge-4/sos-c4/register/: Cargo.toml
Challenge-4/sos-c4/register/src/: lib.rs
Challenge-4/sos-c4/shared/src/: lib.rs
challenge-1/: test.hurl
challenge-1/sos-c1/: Cargo.toml  spin.toml
challenge-1/sos-c1/src/: lib.rs
challenge-2/: README.md  test.hurl
challenge-2/sos-c2/: Cargo.toml  spin.toml
challenge-2/sos-c2/src/: lib.rs
challenge-3/: test.hurl
challenge-3/sos-c3/: Cargo.toml  spin.toml
challenge-3/sos-c3/guess/: Cargo.toml
challenge-3/sos-c3/guess/src/: lib.rs
challenge-3/sos-c3/shared/src/: lib.rs
challenge-3/sos-c3/start/: Cargo.toml
challenge-3/sos-c3/start/src/: lib.rs
